# dodeka

./: .gitignore  LICENSE  README.md  actions.nu  barman_test.sh  build.nu  build_context.sh  build_deploy.sh  config.toml  deploy.nu  deploy.sh  deploy_backup.sh  dev.nu  envs.md  justfile  migrate_notes.md  pyproject.toml  root.nu  setup.md  test.nu  test.sh  upgrade_postgres.md
.github/workflows/: auth-ci.yml  auth-release.yml  backend.yml  (+12 more)
authpage/: package-lock.json  package.json  vite.config.ts
backend/: .env.demo  .env.production  .env.test  .gitignore  CLAUDE.md  README.md  REFACTOR_DESIGN.md  alembic.ini  devenv.toml  pyproject.toml  spec.md  tt.py
backend/actions/: actions.py  local_actions.py
backend/alembic/: README  env.py
backend/alembic/versions/: 6b37dfffd4bc_create_db.py  b96bcee79ed4_create_newuser.py  c531cc81fd9e_permission.py
backend/auth/: .env.demo  .env.production  .env.test  auth-binary.sum  go.mod  go.sum
backend/auth/envs/demo/: .env
backend/auth/envs/production/: .env
backend/auth/envs/test/: .env
backend/deploy_tmp/: .env  define.toml  env.toml  prepare.sh  run.sh  set_envs.sh
backend/docs/: departed-registrations-design.md  final-migration-plan.md  required-spec-updates.md  signup-flow.md  spec-new.md  spec.md
backend/envs/demo/: .env
backend/envs/production/: .env
backend/envs/test/: .env
backend/old_tsts/: test_util.py
backend/old_tsts/query_test/: data_test.py  store_test.py
backend/old_tsts/router_test/: token_test.py
backend/src/apiserver/: actions.py  app.py  app_def.py  app_inst.py  auth_binary.py  auth_cli.py  cli.py  define.py  dev.py  dev_cli.py  email.py  env.py  interactive.py  private.py  server.py  settings.py  sync.py  tokens.py
backend/src/apiserver/app/: app_logging.py  dependencies.py  error.py
backend/src/apiserver/app/modules/: ranking.py  register.py
backend/src/apiserver/app/ops/: header.py  mail.py  startup.py
backend/src/apiserver/app/routers/: __init__.py  admin.py  auth.py  members.py  onboard.py  personalrecord.py  profile.py  ranking.py  update.py
backend/src/apiserver/data/: __init__.py  admin.py  auth.py  client.py  db.py  error.py  members.py  model.py  newuser.py  outbox.py  permissions.py  ranking.py  registration_state.py  registrations.py  source.py  special.py  user.py  userdata.py
backend/src/apiserver/data/api/: classifications.py  content.py  key.py  scope.py  signedup.py  trainings.py  user.py
backend/src/apiserver/data/api/ud/: personalrecord.py  userdata.py
backend/src/apiserver/data/context/: __init__.py  app_context.py  ranking.py  register.py
backend/src/apiserver/data/features/: birthdays.py  private_kv.py
backend/src/apiserver/data/trs/: __init__.py  reg.py
backend/src/apiserver/handlers/: acceptance.py  admin.py  auth.py
backend/src/apiserver/handlers/features/: birthdays.py  private_kv.py
backend/src/apiserver/lib/hazmat/: tokens.py
backend/src/apiserver/lib/model/: entities.py
backend/src/apiserver/lib/resource/: header.py
backend/src/apiserver/resources/: define.toml
backend/src/apiserver/resources/templates/: account_accepted.html  account_accepted.txt  account_accepted_self.html  account_accepted_self.txt  base.html  confirm.html.jinja2  confirm.jinja2  email_update_verification.html  email_update_verification.txt  email_updated.html  email_updated.txt  password_reset.html  password_reset.txt  password_updated.html  password_updated.txt  signin_notification.html  signin_notification.txt  signup_verification.html  signup_verification.txt  sync_please_register.html  sync_please_register.txt
backend/src/apiserver/resources/templates/fragments/: signup_verification_link.html  signup_verification_link.txt
backend/src/apiserver/tooling/: actions.py  auth_cli.py  cli.py  codes.py  command_handlers.py  commands.py  dev.py  dev_cli.py
backend/src/auth/: define.py
backend/src/auth/core/: util.py
backend/src/auth/data/: __init__.py
backend/src/auth/hazmat/: key_decode.py
backend/src/schema/model/: env.py  model.py
backend/src/schema/model/versions/: .gitignore  a0982c86468d_create_content.py
backend/src/store/: __init__.py  db.py  error.py  kv.py  store.py
backend/tests/: auth_test.py  conftest.py  test_dummy_fail.py  test_faroe_api.py  test_outbox.py  test_registration.py  test_spec.py  test_spec2.py  test_spec_new.py  test_sync.py  utilities_test.py
backend/tests/data/: base.csv  base_test.csv  departed.csv  new_members.csv  updated.csv
backend/tests/query_test/: context_test.py  data_test.py  store_test.py
backend/tests/router_test/: data_fixtures.py  register_tests.py
barman/: Dockerfile  barman_entrypoint.sh  server.conf
context/: env.toml
data/: cli.py  test.toml
deploy/: .env.deploy  .gitignore  BACKUP.md  backup.sh  build_context.sh  build_deploy.sh  config.toml  config_demo.toml  deploy.sh  docker-compose.yml  dodeka-auth-demo.service  dodeka-auth-production.service  dodeka-backend-demo.service  dodeka-backend-production.service  dodeka-backup-logrotate  dodeka-db-backup.sh  dodeka-db-common.sh  dodeka-db-cron.sh  dodeka-db-restore.sh  dodeka-status.py  dodeka_crontab  enable-smtp.sh  install-services.sh  justfile  move_config.sh  pyproject.toml  reset-demo.sh  restart-demo.sh  restart-production.sh  tiauth-faroe.service
deploy/deploy_tmp/: docker-compose.yml  generate.py  set_envs.sh
deploy/pull/: pull.py
deploy/repl/: build_repl.sh  repl_config.toml
deploy/use/data_sync/: connect.json  migrate_env.sh
deploy/use/dev/: dev.env  dev_port.env  docker-compose.yml
deploy/use/production/: docker-compose.yml  dployer.sh  entrypoint.sh  production.env
deploy/use/repl/: docker-compose.yml  repl.env
deploy/use/staging/: docker-compose.yml  dployer.sh  entrypoint.sh  secrets.json  source.sh  staging.env  tidploy.json  tidploy.toml
deploy/workflows/: kv.yml  server.yml
deploydb/: .env.deploy  deploy.sh  devdeploy.sh  docker-compose.yml  down.sh
deploykv/: deploy.sh  down.sh
dev/: dev.env  devdeploy.sh
pull/: __init__.py  pull.py
repl/: build_repl.sh  repl_config.toml
use/: .gitignore
(+84 files in other folders)
