[tool.poetry]
name = "dodeka"
version = "1.1.0"
description = ""
authors = ["Tip ten Brink <75669206+tiptenbrink@users.noreply.github.com>"]


[tool.poetry.dependencies]
python = ">=3.10, <3.12"
confspawn = "^0.5.0"
psqlsync = { version = "^0.2.1", extras = ["dirgh"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
