[tool.poetry]
name = "dodeka"
version = "2.1.0"
description = ""
authors = ["Tip ten Brink <75669206+tiptenbrink@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
confspawn = "^0.6.0"
psqlsync = { version = "^0.2.3", extras = ["dirgh"] }
dirgh = "^0.3.1"
alembic = "^1.12.0"
psycopg = { extras = ["binary"], version="^3.1.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"