[project]
name = "apiserver"
version = "4.0.0"
description = "D.S.A.V. Dodeka backend"
authors = [
    { name = "Tip ten Brink", email = "75669206+tiptenbrink@users.noreply.github.com" },
    { name = "Matthijs Arnoldus", email = "mat.arnoldus@kpnmail.nl" },
    { name = "Leander Bindt", email = "leander.bindt@ziggo.nl" },
    { name = "Senne Drent", email = "sennedrent@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "jinja2==3.1.6",
    "tiauth_faroe.user_server",
    "tiauth_faroe.client",
    "hfree",
    "requests==2.32.5",
]

[tool.uv.sources]
"tiauth_faroe.user_server" = { git = "https://github.com/tiptenbrink/tiauth-faroe", subdirectory = "py-user-server/lib" }
"tiauth_faroe.client" = { git = "https://github.com/tiptenbrink/tiauth-faroe", subdirectory = "py-user-server/client", rev="d321ef96388ae16b0c09b1fb06d45d3cfb44d119" }
hfree = { git = "https://github.com/tiptenbrink/pyht" }

[project.scripts]
backend = "apiserver.app:run"

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.14"
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", "**/.venv"]

[tool.ruff.lint.pylint]
max-returns = 10
max-args = 6

[tool.ruff.lint]
select = ["F", "PL", "E", "W", "RUF"]
# TODO: check if we need this
# ignore = ["PLR0913", "E501"]

[tool.ruff.lint.per-file-ignores]
# TODO: check if we need this
# "__init__.py" = ["F403"]
