[project]
name = "apiserver"
version = "4.0.0"
description = "D.S.A.V. Dodeka backend"
authors = [
    { name = "Tip ten Brink", email = "75669206+tiptenbrink@users.noreply.github.com" },
    { name = "Matthijs Arnoldus", email = "mat.arnoldus@kpnmail.nl" },
    { name = "Leander Bindt", email = "leander.bindt@ziggo.nl" },
    { name = "Senne Drent", email = "sennedrent@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "tiauth_faroe.user_server",
    "tiauth_faroe.client",
    "freetser==0.3.1",
    "requests==2.32.5",
]

[tool.uv.sources]
"tiauth_faroe.user_server" = { git = "https://github.com/tiptenbrink/tiauth-faroe", subdirectory = "py-user-server/lib", rev = "f41698233d244c0968e27c41c3059562c0f3de74" }
"tiauth_faroe.client" = { git = "https://github.com/tiptenbrink/tiauth-faroe", subdirectory = "py-user-server/client", rev = "f41698233d244c0968e27c41c3059562c0f3de74" }

[project.scripts]
backend = "apiserver.app:run"
backend-actions = "apiserver.cli:main"
dev = "apiserver.app:run_dev"
demo = "apiserver.app:run_demo"
production = "apiserver.app:run_production"

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.14"
include = ["src"]
exclude = ["**/__pycache__", ".venv", "**/.venv"]

[tool.ruff.lint.pylint]
max-returns = 10
max-args = 7

[tool.ruff.lint]
select = ["F", "PL", "E", "W", "RUF"]

[tool.ruff.lint.per-file-ignores]
