[project]
name = "apiserver"
version = "4.0.0"
description = "D.S.A.V. Dodeka backend"
authors = [
    { name = "Tip ten Brink", email = "75669206+tiptenbrink@users.noreply.github.com" },
    { name = "Matthijs Arnoldus", email = "mat.arnoldus@kpnmail.nl" },
    { name = "Leander Bindt", email = "leander.bindt@ziggo.nl" },
    { name = "Senne Drent", email = "sennedrent@gmail.com" }
]
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "tiauth_faroe.user_server",
    "tiauth_faroe.client",
    "freetser==0.4.1",
    "requests==2.32.5",
    # pin to exact version since freetser doesn't pin
    "h11==0.16.0"
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
"tiauth_faroe.user_server" = { git = "https://github.com/tiptenbrink/tiauth-faroe", subdirectory = "python/user-server", rev = "3f9c8287f968ccca507e6400c3b1cdbfc2071e1b" }
"tiauth_faroe.client" = { git = "https://github.com/tiptenbrink/tiauth-faroe", subdirectory = "python/client", rev = "3f9c8287f968ccca507e6400c3b1cdbfc2071e1b" }

[project.scripts]
backend = "apiserver.app:run"
backend-actions = "apiserver.tooling.cli:main"
ba = "apiserver.tooling.cli:main"
auth-actions = "apiserver.tooling.auth_cli:main"
aa = "apiserver.tooling.auth_cli:main"
dev-actions = "apiserver.tooling.dev_cli:main"
da = "apiserver.tooling.dev_cli:main"
test = "apiserver.app:run_test"
dev = "apiserver.tooling.dev:run_dev"
update-auth = "apiserver.tooling.auth_binary:update_auth"
demo = "apiserver.app:run_demo"
production = "apiserver.app:run_production"

[dependency-groups]
dev = [
    "ty>=0.0.17",
    "pytest>=9.0.1",
    "ruff>=0.15.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.pylint]
max-returns = 24
max-args = 7
max-statements = 75

[tool.ruff.lint]
select = ["F", "PL", "E", "W", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]
