[project]
name = "dodeka"
version = "2.3.0"
description = ""
authors = [
    { name = "Tip ten Brink", email = "75669206+tiptenbrink@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "confspawn>=0.6.0,<0.7.0",
    "psqlsync[dirgh]>=0.2.3,<0.3.0",
    "dirgh>=0.3.1,<0.4.0",
    "alembic>=1.12.0,<2.0.0",
    "psycopg[binary]>=3.1.0,<4.0.0"
]